# Vehicle-Insurance-Eligibility-Prediction

./: .gitignore  Dockerfile  README.md  app.py  demo.py  main.py  pyproject.toml  requirements.lock.txt
.github/workflows/: aws.yaml  pushed.yaml  secretsManager.py  teting.py  triggered.yaml
ProductionFiles/: app.py  requirements.txt
ProductionFiles/src/cloud_storage/: aws_storage.py
ProductionFiles/src/configuration/: aws_connection.py
ProductionFiles/src/constants/: __init__.py
ProductionFiles/src/entity/: config_entity.py  estimator.py  s3_estimator.py
ProductionFiles/src/exception/: __init__.py
ProductionFiles/src/logger/: __init__.py
ProductionFiles/src/pipeline/: prediction_pipeline.py
ProductionFiles/static/: style.css
ProductionFiles/templates/: index.html
config/: schema.yaml
notebook/: notebook.ipynb
src/cloud_storage/: aws_storage.py
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_pusher.py  model_trainer.py
src/configuration/: mongo_db_connection.py
src/constants/: __init__.py
src/data_access/: data_source.py
src/entity/: artifact_entity.py  config_entity.py  estimator.py  s3_estimator.py
src/pipeline/: prediction_pipeline.py  training_pipeline.py
src/utils/: main_utils.py
static/: style.css
templates/: index.html
